# cli_poetry_app

./: README.md  pyproject.toml
cli_poetry_app/: cli.py
tests/: test_core.py
